--- a/public/assets/css/screen/screen.css
+++ b/public/assets/css/screen/screen.css
@@ -36,9 +36,9 @@ body:not([room=""]) .room-name{
 }
 .app-section{
     @apply hidden flex-col absolute inset-0 bg-cover bg-center bg-no-repeat;
+    border-bottom: 15px solid #1D2D44;
 }
 #cover-section {
-
     @apply flex;
 }
 
@@ -57,11 +57,27 @@ body:not([room=""]) .room-name{
     animation: blink ease-in-out 2s infinite;
 }
 .question-box-container{
-    @apply h-full flex flex-col bg-primary p-1;
-    clip-path: polygon(4% 0, 96% 0%, 100% 50%, 96% 100%, 4% 100%, 0% 50%);
+    @apply relative h-full flex flex-col px-1 pb-[10px];
+    /* clip-path: polygon(4% 0, 96% 0%, 100% 50%, 96% 100%, 4% 100%, 0% 50%); */
+}
+.question-box-container:before, .question-box-container:after{
+    content: "";
+    @apply absolute top-0 bottom-0 bg-no-repeat z-10;
+    width: calc(50% + 110px);
+    background-size: auto 100%;
+}
+.question-box-container:before{
+    @apply left-[-110px];
+    background-image: url("../../img/screen/question-container-left.png");
+    background-position: left center;
+}
+.question-box-container:after{
+    @apply right-[-110px];
+    background-image: url("../../img/screen/question-container-right.png");
+    background-position: right center;
 }
 .question-box-container-inner {
-    @apply w-full h-full flex flex-col bg-white px-20 py-5;
+    @apply w-full h-full flex flex-col bg-white px-20 py-5 relative z-20;
     clip-path: polygon(3.9% 0, 96.1% 0%, 100% 50%, 96.1% 100%, 3.9% 100%, 0% 50%);
 }
 .question-text-container{
@@ -103,16 +119,12 @@ body:not([room=""]) .room-name{
     background-image: url("../../img/screen/bg-main.png");
 }
 
-.bg-question{
-    background-image: url("../../img/screen/bg-question.png");
-}
-
 .bg-cover {
     background-image: url("../../img/screen/bg-cover.png");
 }
 
 #container-team-scores > div {
-    @apply flex flex-col items-center w-1/6 h-fit;
+    @apply flex flex-col items-center flex-1 h-fit;
 }
 
 .container-team-results {
@@ -128,12 +140,12 @@ body:not([room=""]) .room-name{
 }
 
 .team-results > .progress-bar {
-    @apply h-full flex items-center bg-secondary max-w-[0];
+    @apply h-full flex items-center max-w-[0];
     transition: all .3s ease-in-out;
 }
 
 .team-results > .progress-bar p{
-    @apply text-primary text-xl font-bold ms-2 hidden;
+    @apply text-white text-xl font-bold ms-2 hidden;
 }
 .team-results > .progress-bar.animate{
     @apply max-w-full;
@@ -147,16 +159,14 @@ body:not([room=""]) .room-name{
 }
 
 .container-team-score {
-    @apply relative w-full flex flex-col items-center text-white font-bold bg-primary px-5 py-3 mt-5;
+    @apply relative w-full flex flex-col items-center text-gray-text bg-white px-5 py-3 mt-5;
 }
 
 .container-team-score.team-1::after,
 .container-team-score.team-2::after,
-.container-team-score.team-3::after,
-.container-team-score.team-4::after,
-.container-team-score.team-5::after {
+.container-team-score.team-3::after {
     content: "";
-    @apply absolute top-1/2 right-0 -translate-y-1/2 w-[1px] h-2/3 bg-white;
+    @apply absolute top-1/2 right-0 -translate-y-1/2 w-[1px] h-2/3 bg-gray-text;
 }
 
 .label-team-name {
@@ -168,8 +178,8 @@ body:not([room=""]) .room-name{
 }
 
 .team-score {
-    @apply text-6xl text-transparent font-black;
-    -webkit-text-stroke: 3px white;
+    @apply text-6xl text-white font-bold;
+    -webkit-text-stroke: 3px #575E61;
 }
 
 
@@ -226,7 +236,7 @@ body:not([room=""]) .room-name{
 ################################ RANKING  ########################################
 ############################################################################### */
 .ranking-element {
-    @apply w-[15%] bg-primary text-white border-2 border-primary transition-opacity duration-500;
+    @apply w-[17%] bg-white text-gray-text border-2 border-white transition-opacity duration-500;
 }
 
 .ranking-element-inner {
@@ -242,24 +252,26 @@ body:not([room=""]) .room-name{
 }
 
 .ranking-border {
-    @apply w-full h-[1px] bg-white my-12;
+    @apply w-full h-[1px] bg-gray-text my-12;
 }
 
 .ranking-score {
-    @apply text-7xl font-black text-transparent mt-3;
-    -webkit-text-stroke: 3px white;
+    @apply text-[5rem] font-bold text-white mt-3;
+    -webkit-text-stroke: 3px #575E61;
 }
 
 .ranking-first.animate-pulse {
     @apply border-white;
-    background: linear-gradient(135deg,rgba(75, 125, 160, 1) 0%, rgba(132, 200, 187, 1) 100%);
+    background: linear-gradient(135deg,rgb(75, 125, 160) 0%, rgb(137 231 218) 100%);
     box-shadow: 0 0 17px 8px #ffffff;
     animation: pulse 2s ease-in-out 3 forwards;
 }
-
-.ranking-first-inner {
-    @apply mix-blend-hard-light;
-    background: linear-gradient(135deg,rgba(75, 125, 160, 1) 0%, rgba(132, 200, 187, 1) 100%);
+.ranking-first.animate-pulse {
+    color: #FFF;
+}
+.ranking-first.animate-pulse .ranking-score{
+    @apply text-transparent;
+    -webkit-text-stroke: 3px #FFF;
 }
 
 @keyframes pulse {
