--- a/public/assets/css/participant/participant.css
+++ b/public/assets/css/participant/participant.css
@@ -51,8 +51,24 @@ p, input, button, a{
 }
 
 .container-team-name {
+    @apply relative;
+}
+.container-team-name p{
+    @apply relative z-20;
+}
+.container-team-name:before, .container-team-name:after {
+    content: "";
+    @apply absolute top-0 w-1/2 bg-no-repeat z-10 h-full;
     background-image: url("../../img/participant/team-name.png");
-    background-size: 100% 100%;
+    background-size: auto 100%;
+}
+.container-team-name:before {
+    @apply left-0;
+    background-position: left center;
+}
+.container-team-name:after {
+    @apply right-0;
+    background-position: right center;
 }
 
 /* #############################################################################
